retoques finais nas páginas e rotas

--- a/FrontEnd/eRural/src/app/inicial/inicial.component.html
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.html
@@ -27,58 +27,110 @@
   </div>
 </div>
 
-<div class="jumbotron jumbotron-fluid jumbotronBackground">
-  <div class="container">
-    <h1 class="display-4">eRural</h1>
-    <h2>Alimentação saudável é fundamental</h2>
-    <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
-    <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
-    <p>É um cliente? Verifique os produtos disponíveis em nossa plataforma!</p>
-  </div>
-</div>
+<div class="row">
+  <div class="col-md-12">
 
+    <div class="container-fluid d-flex">
+      <div class="row mb-5 mt-5 m-auto">
 
-  <div class="row">
-    <div class="col-md-12">
+        <div class="product card mr-3 mt-5 ml-3 mb-5">
+          <div class="imgbox">
+            <img class="img-fluid" src="https://i.imgur.com/N6nLtFA.png">
+          </div>
+          <div class="details">
+            <h2 class="text-center">Vegetais<br><span>Deliciosos</span></h2>
+            <a class="card1" routerLink="/cadastro-produto">Saiba mais!</a>
+            <!--CARRINHO-->
+          </div>
+        </div>
 
-      <div class="container-fluid d-flex">
-        <div class="row mb-5 mt-5 m-auto">
+        <div class="product card mr-3 mt-5 ml-3 mb-5">
+          <div class="imgbox">
+            <img class="img-fluid" src="https://i.imgur.com/TKYQilo.png">
+          </div>
+          <div class="details">
+            <h2 class="text-center">Frutas<br><span>Fresquinhas e deliciosas!</span></h2>
+            <a class="card1" routerLink="/login">Saiba mais!</a>
+            <!--CARRINHO-->
+          </div>
+        </div>
 
-            <div class="product card mr-3 mt-5 ml-3 mb-5">
-              <div class="imgbox">
-                <img src="https://i.imgur.com/v2Tyk5a.png">
-              </div>
-              <div class="details">
-                <h2 class="text-center">Vegetais<br><span>Frescos</span></h2>
-                <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos!</a>
-                <!--CARRINHO-->
-              </div>
-            </div>
-
-            <div class="product card mr-3 mt-5 ml-3 mb-5">
-              <div class="imgbox">
-                <img src="https://i.imgur.com/v2Tyk5a.png">
-              </div>
-              <div class="details">
-                <h2 class="text-center">Frutas<br><span>Fresquinhas e deliciosas!</span></h2>
-                <a class="card1" routerLink="/login">Compre Agora!</a>
-                <!--CARRINHO-->
-              </div>
-            </div>
-
-            <div class="product card mr-3 mt-5 ml-3 mb-5">
-              <div class="imgbox">
-                <img src="https://i.imgur.com/8nICsK8.png">
-              </div>
-              <div class="details">
-                <h2 class="text-center">Ferramentas <br><span>Itens utilizados em plantio</span></h2>
-                <a class="card1" routerLink="/login">Compre Agora!</a>
-                <!--CARRINHO-->
-              </div>
-            </div>
+        <div class="product card mr-3 mt-5 ml-3 mb-5">
+          <div class="imgbox">
+            <img class="img-fluid" src="https://i.imgur.com/8nICsK8.png">
+          </div>
+          <div class="details">
+            <h2 class="text-center">Ferramentas <br><span>Itens utilizados em plantio</span></h2>
+            <a class="card1" routerLink="/login">Saiba mais!</a>
+            <!--CARRINHO-->
+          </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 
+
+<div class="jumbotron jumbotron-fluid jumbotronBackground">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Alimentação saudável é fundamental</h2>
+        <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
+        <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
+        <p>É um cliente? Verifique os produtos disponíveis em nossa plataforma!</p>
+      </div>
+      <div class="col-md-4">
+        <img src="https://i.imgur.com/DkPmKq0.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-md-12">
+
+    <div class="container-fluid d-flex">
+      <div class="row mb-5 mt-5 m-auto">
+
+        <div class="product card mr-3 mt-5 ml-3 mb-5">
+          <div class="imgbox">
+            <img class="img-fluid" src="https://i.imgur.com/OPRk3Qj.png">
+          </div>
+          <div class="details">
+            <small class="ml-5 text-success">A partir de: R$10,99</small>
+            <h2 class="text-center">Lichia<br><span>Deliciosas</span></h2>
+            <a class="card1" routerLink="/login">Saiba mais!</a>
+            <!--CARRINHO-->
+          </div>
+        </div>
+
+        <div class="product card mr-3 mt-5 ml-3 mb-5">
+          <div class="imgbox">
+            <img class="img-fluid" src="https://i.imgur.com/iswlt2Y.png">
+          </div>
+          <div class="details">
+            <small class="ml-5 text-success">A partir de: R$1,99</small>
+            <h2 class="text-center">Laranja<br><span>Suculentas e deliciosas!</span></h2>
+            <a class="card1" routerLink="/login">Saiba mais!</a>
+            <!--CARRINHO-->
+          </div>
+        </div>
+
+        <div class="product card mr-3 mt-5 ml-3 mb-5">
+          <div class="imgbox">
+            <img class="img-fluid" src="https://i.imgur.com/A8LytJx.png">
+          </div>
+          <div class="details">
+            <small class="ml-5 text-success">A partir de: R$3,59</small>
+            <h2 class="text-center">Manga <br><span>Docinhas e saborosas</span></h2>
+            <a class="card1" routerLink="/login">Saiba mais!</a>
+            <!--CARRINHO-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
