--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
@@ -1,6 +1,6 @@
 <!--CARROSEL-->
 <div id="carouselExampleIndicators" class="carousel slide mt-5" data-ride="carousel">
-  <ol class="carousel-indicators">
+  <ol class="carousel-indicators mt-5">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -35,19 +35,19 @@
 
 <!--jumbotrom-->
 <div class="jumbotron jumbotron-fluid jumbotronBackground">
-  <div class="container mt-3">
-    <h3 class="display-4 d-flex justify-content-center">Seja um parceiro</h3>
+  <div class="container m-auto">
 
-    <div class="row align-items-center">
+
+    <div class="row mt-3">
 
       <div class="col-md-4">
 
-        <img class="img-fluid img-round rounded-circle p-0 " src="https://i.imgur.com/vbllDnRb.jpg" alt="">
+        <img class="img-fluid mb-5" src="https://i.imgur.com/YVTq5wY.png" alt="">
 
       </div>
 
       <div class="col-md-8">
-
+        <h3 class="display-4 d-flex justify-content-center">Seja um parceiro</h3>
         <p class="lead ">Soluções inteligentes que transformam informação em conhecimento e geraram produtividade e precisão. Não encontre clientes para o seu produto, encontre produtos para os  seus clientes.</p>
       </div>
     </div>
@@ -57,15 +57,15 @@
 
 <!--CARD-->
 <!--após fazer a service de Categoria, linkar categoria aqui! Lembre-se o card só aparece quando cadastrar a categoria-->
-<div class="container d-flex">
+<div class="container d-flex mt-5">
   <div class="row mb-5 mt-5 m-auto">
 
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
+          <img src="https://i.imgur.com/N6nLtFA.png">
         </div>
         <div class="details">
-          <h2 class="text-center">Vegetais<br><span>Frescos</span></h2>
+          <h2 class="text-center">Vegetais <br><span>Deliciosos</span></h2>
           <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos!</a>
           <!--CARRINHO-->
         </div>
@@ -73,7 +73,7 @@
 
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
+          <img src="https://i.imgur.com/4RBVSxi.png">
         </div>
         <div class="details">
           <h2 class="text-center">Hortaliças <br><span>Frescas</span></h2>
@@ -84,7 +84,7 @@
 
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
+          <img src="https://i.imgur.com/8nICsK8.png">
         </div>
         <div class="details">
           <h2 class="text-center">Ferramentas <br><span>Itens para plantio</span></h2>
