--- a/FrontEnd/eRural/src/app/menu/menu.component.html
+++ b/FrontEnd/eRural/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-
+<nav class="header1 navbar navbar-expand-lg navbar-light menuBar">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
     aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
@@ -9,44 +9,67 @@
         <a class="nav-link ml-3" href="#"><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px"
             height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
       </li>
-      <ul class="align-items-center justify-content-center">
-        <form class="form-inline">
-          <div>
-            <input class="form-control mr-xl-2 ml-5" style="min-width: 60px;" type="search" placeholder="Pesquisar"
-              aria-label="Pesquisar">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-          </div>
-        </form>
-      </ul>
 
+      <!-- foi -->
       <!--Home-->
       <div class="d-flex justify-content-center">
-        <ul class=" navbar-nav mr-auto">
-          <li *ngIf='mudarMenu()==false' class="nav-item active ">
-            <a class="nav-link mr-3 aling" routerLink='/inicio'>Início</a>
+        <ul class=" menu navbar-nav mr-auto align-items-center">
+
+          <li *ngIf='mudarMenu()==false' class="nav-item active text-center">
+            <a class="nav-link ml-5 mr-3 aling" routerLink='/inicio'>
+              <strong _ngcontent-pfo-c35="">Inicio</strong></a>
           </li>
-          <li *ngIf='mudarMenu()==false ' class="nav-item active">
-            <a class="nav-link mr-3 " routerLink='/ajuda'>Sobre</a>
-          </li>
-          <li *ngIf='mudarMenu()==false' class="nav-item active">
-            <a class="nav-link mr-3  " routerLink='/login'>Entrar</a>
-          </li>
-          <li *ngIf='mudarMenu()==false' class="nav-item active">
-            <a class="nav-link mr-3  " routerLink='/cadastro'>Cadastrar</a>
-          </li>
-          <li *ngIf='menuAdm()==true' class="nav-item active">
-            <a class="nav-link mr-3  " routerLink='/admin'>Adminstrador</a>
+          <li *ngIf='mudarMenu()==false ' class=" nav-item active">
+            <a class="nav-link mr-3 " routerLink='/ajuda'>
+              <strong _ngcontent-pfo-c35="">Sobre</strong> </a>
           </li>
         </ul>
       </div>
       <!--Home-->
+      <p class="ml-5"></p>
+      <!-- Search -->
+      <ul class="align-items-center justify-content-center ">
+        <form class="form-inline mt-2 ">
+          <div>
+            <input class="form-control mr-xl-2 ml-5 " style="min-width: 550px;" type="search" placeholder="Pesquisar"
+              aria-label="Pesquisar">
+            <button class="btn btn-outline-success my-2 my-sm-0 m-auto" type="submit">Pesquisar</button>
+          </div>
+        </form>
+      </ul>
+      <p class="ml-5"></p>
+      <p class="ml-5"></p>
+      <p class="ml-5"></p>
+      <p class="ml-5"></p>
+      <p class="ml-5"></p>
+      <ul class=" menu navbar-nav align-items-end justify-content-end">
+        <li *ngIf='mudarMenu()==false' class="nav-item active">
+          <a class="nav-link ml-5 mr-5" routerLink='/login'><img class="login" src="https://i.imgur.com/e6IEepg.png"
+              alt="logo" width="42px" height="50px" class="img-fluid"><strong _ngcontent-pfo-c35=""> Entrar</strong></a>
+        </li>
+      </ul>
+      <!--Produtor -->
+      <li *ngIf='menuProdutor()==true' class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5" href="#" id="navbarDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <img class="login"
+            src=" https://i.imgur.com/LNoXwI9.png" alt="logo" width="48px" height="50px" class="img-fluid">
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Cadastrar Produto</a>
+          <a class="dropdown-item fontMenu" routerLink='/minha-conta'>Pedidos</a>
+          <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
+        </div>
+      </li>
+      <!--Produtor -->
 
       <!--Cliente-->
-      <li *ngIf='menuCliente()==true' class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5" href="#" id="navbarDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Minha Conta
-        </a>
+      <li *ngIf='menuCliente()==true' class=" menuCliente nav-item dropdown align-items-center justify-content-center">
+        <p class="ml-5"></p>
+        <p class="ml-5"></p>
+        <p class="ml-5"></p>
+        <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5 text-white position-relative " href="#"
+          id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Minha Conta</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item fontMenu" routerLink="">Meus Pedidos</a>
           <a class="dropdown-item fontMenu" routerLink='/listaProdutos'>Produtos</a>
@@ -56,33 +79,20 @@
       </li>
       <!--Cliente-->
 
-      <!--Produtor -->
-      <li *ngIf='menuProdutor()==true' class="nav-item dropdown">
+      <!-- Adm -->
+      <li *ngIf='menuAdm()==true' class="nav-item dropdown">
         <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5" href="#" id="navbarDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Minha conta
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <img class="login"
+            src=" https://i.imgur.com/LNoXwI9.png" alt="logo" width="48px" height="50px" class="img-fluid">
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Cadastrar Produto</a>
-          <a class="dropdown-item fontMenu" routerLink='/minha-conta'>Produtos</a>
           <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
         </div>
       </li>
-      <!--Produtor -->
 
- 
-      <li *ngIf='menuProdutor()==true' class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5" href="#" id="navbarDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Minha conta
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Cadastrar Produto</a>
-          <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
-        </div>
-      </li>
-      <!--Produtor -->
+      <!-- Adm -->
+
     </ul>
   </div>
 </nav>
-
