--- a/FrontEnd/eRural/src/app/delete/produtos-delete/produtos-delete.component.html
+++ b/FrontEnd/eRural/src/app/delete/produtos-delete/produtos-delete.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-5 mt-5">
 
-    <div class="row">
-        <div class="col-md-12">
+    <div class="row mt-5">
+        <div class="col-md-12 mt-5">
             <h1 class="text-center text-secondary">Apagar produtos</h1>
         </div>
     </div>
@@ -22,8 +22,8 @@
     </div>
     <div class="row mt-5">
         <div class="col-md-12 d-flex justify-content-center">
-            <button class="btn btn-danger" routerLink='/cadastro-produto'>Não</button>
-            <button class="btn btn-success" (click)='apagar()'>Sim</button>
+            <button class="btn btn-danger mr-2 ml-2" routerLink='/cadastro-produto'>Não</button>
+            <button class="btn btn-success mr-2 ml-2" (click)='apagar()'>Sim</button>
         </div>
     </div>
  </div>
