add:Atualizações menu-footer

--- a/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
@@ -35,28 +35,17 @@
 
 <!--jumbotrom-->
 <div class="jumbotron jumbotron-fluid jumbotronBackground">
-  <div class="container mt-3">
-    <h3 class="display-4 d-flex justify-content-center">Seja um parceiro</h3>
-
-    <div class="row align-items-center">
-
-      <div class="col-md-4">
-
-        <img class="img-fluid img-round rounded-circle p-0 " src="https://i.imgur.com/vbllDnRb.jpg" alt="">
-
-      </div>
-
+  <div class="container">
+    <div class="row">
       <div class="col-md-8">
-
-        <p class="lead ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsum fugiat dicta eaque
-          et
-          reiciendis, enim, totam iusto quis atque possimus dolor! Vitae error dolorem voluptatum laborum minima
-          iusto
-          qui ipsa rem perferendis illo. In eum placeat aperiam porro impedit veritatis, dolorum quos blanditiis
-          eos
-          eligendi soluta cupiditate modi quaerat corporis, ex ab voluptatem rem perspiciatis, maiores
-          asperiores? Quia,
-          mollitia. </p>
+        <h1>Seja um parceiro</h1>
+        <p class="lead ">Venha ser um cliente e-Rural, comprando algum de nossos itens você tem a possibilidade de conhecer a origem dos produtos e saber como são produzidos.Tem a possibilidade de consumir alimentos mais frescos,
+          recém colhidos, comprar produtos por um preço mais em conta aos quais não foram incorporados as custos de transporte ate o
+          mercado e de comercialização, além disso, pode haver uma troca de informações entre o produtor e o
+          consumidor, estabelecendo-se um vínculo de fidelidade, e ainda contribuindo coma a alimentação de pessoas carentes, venha ser um e-Rural você também. </p>
+      </div>
+      <div class="col-md-4">
+        <img src="https://i.imgur.com/DkPmKq0.png" alt="">
       </div>
     </div>
   </div>
@@ -70,23 +59,21 @@
 
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
+          <img src="https://i.imgur.com/N6nLtFA.png">
         </div>
         <div class="details">
           <h2>Vegetais<br><span>Frescos</span></h2>
-          <div class="preco">Seu preço aqui!</div>
-          <a class="card1" routerLink="/cadastro-produto">Veja mais!</a>
+          <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
           <!--CARRINHO-->
         </div>
       </div>
 
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
+          <img src="https://i.imgur.com/4RBVSxi.png">
         </div>
         <div class="details">
           <h2>Hortaliças <br><span>Frescas</span></h2>
-          <div class="preco">Seu preço aqui!</div>
           <a class="card1"routerLink="/listaProdutos">Veja mais!</a>
           <!--CARRINHO-->
         </div>
@@ -94,7 +81,7 @@
 
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
+          <img src="https://i.imgur.com/8nICsK8.png">
         </div>
         <div class="details">
           <div class="row mt-1 mb-2">
@@ -103,7 +90,7 @@
           <div class="row d-flex justify-content-center mb-0">
             <p><small>Itens para plantio</small></p>
           </div>
-          <a class="card1" routerLink="/listaProdutos">Consulte agora!</a>
+          <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
           <!--CARRINHO-->
         </div>
       </div>
