--- a/FrontEnd/eRural/src/app/admin/admin.component.html
+++ b/FrontEnd/eRural/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="mt-5">
-
+  <!--chamadaTop-->
   <div class="row mt-5 mb-5 text-center justify-content-center">
     <div class="container mt-5">
       <h1>Bem-vindo(a) Administrador(a)</h1>
@@ -32,39 +32,38 @@
           <!--TODASCATEGORIAS-->
           <div class="tab-pane fade show active" id="todasCategorias" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
-            <div class="product card mr-3 mt-5 ml-3 mb-5" *ngFor='let item of listaCategoria'>
-              <div class="imgbox">
-                <img src='{{item.imagem}}'>
-              </div>
-              <div class="details">
-                <h5 class="card-title m-0">{{item.nome}}</h5>
-                <p class="card-text mt-3">{{item.descricao}}</p>
-                <a class="card1" [routerLink]="['/categoria-edit', item.id]">Editar</a>
-                <a class="card2" [routerLink]="['/categoria-delete', item.id]">Apagar</a>
-              </div>
-            </div>
-          </div>
-            <!--/TODASCATEGORIAS-->
 
-
-          <div class="tab-pane fade show active" id="categoriaProdutos" role="tabpanel">
-
-            <div class="product card mr-3 mt-5 ml-3 mb-5" *ngFor='let categoria of listaCategoria'>
-              <div *ngFor='let item of categoria.produtos'>
-                <div class="imgbox">
-                  <img src='{{item.imagem}}'>
-                </div>
-                <div class="details">
+            <div class="card-columns">
+              <div class="card text-center m-2" *ngFor='let item of listaCategoria'>
+                <div class="card-body">
+                  <div class="display-inline img-fluid"><img src='{{item.imagem}}' width="70" height="120"></div>
                   <h5 class="card-title m-0">{{item.nome}}</h5>
-                  <p class="card-text mt-3">Categoria: {{categoria.nome}}</p>
                   <p class="card-text mt-3">{{item.descricao}}</p>
-                  <p class="card-text"><small class="text-muted">Postado por: {{item.usuario.nome}}</small></p>
-                  <a class="card2" [routerLink]="['/delete-produto', item.id]">Apagar</a>
+                  <a class="card1" [routerLink]="['/categoria-edit', item.id]">Editar</a>
+                  <a class="card2" [routerLink]="['/categoria-delete', item.id]">Apagar</a>
                 </div>
               </div>
             </div>
           </div>
+          <!--/TODASCATEGORIAS-->
 
+          <!--PRODUTOS-->
+          <div class="tab-pane fade" id="categoriaProdutos" role="tabpanel">
+            <div class="card-columns">
+              <div *ngFor='let categoria of listaCategoria'>
+              <div class="card text-center m-2" *ngFor='let item of categoria.produtos'>
+                  <div class="card-body">
+                    <div class="display-inline img-fluid"><img src='{{item.imagem}}' width="70" height="120"></div>
+                    <h5 class="card-title m-0">{{item.nome}}</h5>
+                    <p class="card-text mt-3">Categoria: {{categoria.nome}}</p>
+                    <p class="card-text mt-3">{{item.descricao}}</p>
+                    <p class="card-text"><small class="text-muted">Postado por: {{item.usuario.nome}}</small></p>
+                    <a class="card2" [routerLink]="['/delete-produto', item.id]">Apagar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
 
           <div class="tab-pane fade d-flex justify-content-center" id="Criar" role="tabpanel"
             aria-labelledby="nav-criar-tab">
