--- a/FrontEnd/eRural/src/app/menu/menu.component.css
+++ b/FrontEnd/eRural/src/app/menu/menu.component.css
@@ -34,6 +34,8 @@
     justify-content: space-between;
     align-items: center;
     transition: 0.06s;
+    padding: 0;
+    margin: 0;
     
 }
 .headerLogo{
