--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -7,7 +7,9 @@
           <h3>Aqui você cria, edita e deleta seus Produtos</h3>
         </div>
         <div class="col-md-6">
-          <img class="img-fluid" src="https://i.imgur.com/MZQ4V94.png" alt="">
+
+          <img class="img-fluid" src="https://i.imgur.com/kL1eOUb.png" alt="">
+
         </div>
       </div>
       <!--MENU-->
@@ -35,10 +37,11 @@
           <div class="tab-pane fade show active" id="todosProdutos" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
             <!--LISTA CATEGORIAS-->
-            <div class="card-columns">
+
+            <div class="card-columns" >
               <div class="card text-center m-2" *ngFor='let item of listaCategoria'>
                 <div class="card-body">
-                  <div><img class="img-fluid" src='{{item.imagem}}' width="70" height="100"></div>
+                  <div class="display-inline"><img src='{{item.imagem}}' width="70" height="120"></div>
                   <h5 class="card-title m-0">{{item.nome}}</h5>
                   <p class="card-text mt-3">{{item.descricao}}</p>
                 </div>
@@ -46,21 +49,30 @@
             </div>
             <!--/LISTA CATEGORIAS-->
           </div>
+
           <div class="tab-pane fade" id="Produtos" role="tabpanel">
             <!--LISTA PRODUTO DO PRODUTOR-->
+
             <div class="card-columns" >
               <div class="card text-center m-2" *ngFor='let item of usuario.produto'>
                 <div class="card-body">
-                  <div><img src='{{item.imagem}}' width="70" height="100"></div>
-                  <h5 class="card-title m-0">{{item.nome}}</h5>
-                  <h3 class="card-title m-0">{{categoria.nome}}</h3>
-                  <p class="card-text mt-3">{{item.descricao}}</p>
+                  <div class="display-inline img-fluid"><img src='{{item.imagem}}' width="70" height="120"></div>
+                  <p class="card-text m-auto">Categoria: {{item.categorias.nome}}</p>
+                  <h5 class="card-title m-auto">{{item.nome}}</h5><span class="preco"> Preço: {{item.preco}}</span>
+                  <p class="card-text m-auto">{{item.descricao}}</p>
+                  <label class="label">Peso: {{item.peso}}</label>
+                  <a class="card1" [routerLink]="['/editar-produto', item.id]">Editar</a>
+                  <a class="card2" [routerLink]="['/delete-produto', item.id]">Apagar</a>
 
-                  <a class="text-info mr-3" [routerLink]="['/editar-produto', item.id]">Editar</a>
-                  <a class="text-danger" [routerLink]="['/delete-produto', item.id]">Apagar</a>
                 </div>
               </div>
             </div>
+
+            <!--
+              <div class="details">
+
+              </div>
+            </div> -->
             <!--/LISTA PRODUTO DO PRODUTOR-->
           </div>
 
