--- a/FrontEnd/eRural/src/app/lista-produto/TESTE.HTM
+++ b/FrontEnd/eRural/src/app/lista-produto/TESTE.HTM
@@ -2,9 +2,9 @@
 
   <div class="row mt-5">
     <div class="col-md-3 justify-content-center mt-5">
-      <div *ngFor='let cat of listaCategorias | orderBy: key: reverse' class="mt-2 mr-5 d-flex align-items-start flex-column bd-highlight mb-3"
+      <div *ngFor='let cat of listaCategorias' class="mt-2 mr-5 d-flex align-items-start flex-column bd-highlight mb-3"
         style="height: 200px;">
-        <div *ngFor='let prod of listaProdutos | orderBy: key: reverse' class="mt-1 ml-5 d-flex align-items-start flex-column bd-highlight mb-3"
+        <div *ngFor='let prod of listaProdutos' class="mt-1 ml-5 d-flex align-items-start flex-column bd-highlight mb-3"
           style="height: 200px;">
           {{cat.nome}}<br>
           <a href="i">{{prod.nome}}</a>
@@ -14,7 +14,7 @@
     </div>
     <div class="col-md-9">
       <div class="row">
-        <div *ngFor='let item of listaProdutos | orderBy: key: reverse' class="product card mr-3 mt-5 ml-3 mb-2">
+        <div *ngFor='let item of listaProdutos' class="product card mr-3 mt-5 ml-3 mb-2">
           <div class="imgbox">
             <img class="img" src="{{item.imagem}}">
           </div>
