--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -17,8 +17,9 @@
                 aria-controls="nav-todas-tab" aria-selected="true">Categorias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="produtos" data-toggle="tab" href="#Produtos" role="tab"
-                aria-controls="nav-categoriaProdutos-tab" aria-selected="false" (click)='findByIdUsuario()'>Seus Produtos</a>
+              <a class="nav-link" id="nav-todosProdutos-tab
+              " data-toggle="tab" href="#Produtos" role="tab"
+                aria-controls="nav-categoriaProdutos" aria-selected="false" (click)='findByIdUsuario()'>Seus Produtos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="cadastro" data-toggle="tab" href="#Cadastrar" role="tab"
@@ -27,31 +28,59 @@
           </ul>
         </nav>
         <!--/NAV-->
-
-
         <div class="tab-content texto" id="nav-tabContent">
-          <div class="tab-pane fade show active" id="todosProdutos" role="tabpanel"
-            aria-labelledby="nav-todasPostagens-tab">
+          <div class="tab-pane fade show active" id="pesquisaCategoria" role="tabpanel"
+            aria-labelledby="nav-todasCategorias-tab">
           <!--LISTA CATEGORIAS-->
+
+          <!--BARRA PESQUISA-->
+          <div class="row d-flex justify-content-center mt-5 mb-5">
+            <div class="col-md-4">
+
+              <div class="form-group">
+                <input type="text" class="form-control" id="categoria" placeholder="Digite nome de categoria para pesquisar" [(ngModel)]='nomeCategoria' (keyup)='findByNomeCategoria()'>
+              </div>
+
+            </div>
+
+          </div>
+          <!--/BARRA PESQUISA-->
+
             <div class="card-columns">
-              <div class="card text-center m-2" *ngFor='let item of listaCategoria'>
+              <div class="card text-center m-2" *ngFor='let categ of listaCategoria'>
+                <div class="card text-center m-2" *ngFor='let prod of categ.produtos'>
                 <div class="card-body">
-                  <div><img src='{{item.imagem}}' width="70" height="100"></div>
-                  <h5 class="card-title m-0">{{item.nome}}</h5>
-                  <p class="card-text mt-3">{{item.descricao}}</p>
+                  <div><img src='{{prod.imagem}}' width="70" height="100"></div>
+                  <h5 class="card-title m-0">{{prod.nome}}</h5>
+                  <p class="card-text mt-3">{{prod.descricao}}</p>
 
 
                 </div>
               </div>
             </div>
+            </div>
             <!--/LISTA CATEGORIAS-->
           </div>
           <div class="tab-pane fade" id="Produtos" role="tabpanel">
-            <!--LISTA PRODUTO DO PRODUTOR-->
-            <div class="card-columns" *ngFor='let item of usuario.produto'>
-              <div class="card text-center m-2">
+          <!--LISTA PRODUTO DO PRODUTOR-->
+
+          <!--BARRA PESQUISA-->
+          <div class="row d-flex justify-content-center mt-5 mb-5">
+            <div class="col-md-4">
+
+              <div class="form-group">
+                <input type="text" class="form-control" id="nome" placeholder="Digite nome de produto para pesquisar" [(ngModel)]='nomeProduto' (keyup)='findByNomeProduto()'>
+              </div>
+
+            </div>
+
+          </div>
+          <!--/BARRA PESQUISA-->
+
+            <div class="card-columns" >
+              <div class="card text-center m-2" *ngFor='let item of listaProduto | orderBy: key: reverse'>
                 <div class="card-body">
-                  <div><img src='{{item.imagem}}' width="70" height="100"></div>
+                  <div class="display-inline"><img src='{{item.imagem}}' width="70" height="100"></div>
                   <h5 class="card-title m-0">{{item.nome}}</h5>
                   <h3 class="card-title m-0">{{categoria.nome}}</h3>
                   <p class="card-text mt-3">{{item.descricao}}</p>
@@ -72,8 +101,8 @@
               <!--aqui e o formulario-->
               <div id="formExemplo" data-toggle="validator" role="form">
                 <div class="form-group">
-                  <label for="textNome" class="control-label">Nome</label>
-                  <input [(ngModel)]='produto.nome' id="textNome" class="form-control" placeholder="Nome do Produto"
+                  <label for="nome" class="control-label">Nome</label>
+                  <input [(ngModel)]='produto.nome' id="nome" class="form-control" placeholder="Nome do Produto"
                     type="text" required>
                 </div>
                 <div class="form-group">
@@ -81,15 +110,15 @@
                   <label for="exampleFormControlSelect1">Categoria</label>
                   <select class="form-control" id="categoria" name="categoria" [(ngModel)]='idCategoria'
                     (change)='findByIdCategoria()'>
-                    <option *ngFor='let item of listaCategoria' value="{{item.id}}">{{item.nome}}</option>
+                    <option *ngFor='let item of listaCategoria | orderBy: key: reverse' value="{{item.id}}">{{item.nome}}</option>
                     <!--/CATEGORIAS-->
                   </select>
                 </div>
 
                 <div class="form-group">
-                  <label for="textQuantidade" class="control-label">Quantidade</label>
+                  <label for="quantidade" class="control-label">Quantidade</label>
 
-                  <input [(ngModel)]='produto.quantidade' id="textQuantidade" class="form-control"
+                  <input [(ngModel)]='produto.quantidade' id="quantidade" class="form-control"
                     placeholder="Digite a Quantidade" type="number" required>
                 </div>
                 <div class="form-group">
@@ -99,19 +128,19 @@
 
                 </div>
                 <div class="form-group">
-                  <label for="textPreço" class="control-label">Preço</label>
-                  <input [(ngModel)]='produto.preco' id="textPreço" class="form-control" placeholder="Digite o Preço"
+                  <label for="preco" class="control-label">Preço</label>
+                  <input [(ngModel)]='produto.preco' id="preco" class="form-control" placeholder="Digite o Preço"
                     type="number" required>
                 </div>
                 <div class="form-group">
-                  <label for="textLink" class="control-label">Link</label>
-                  <input [(ngModel)]='produto.imagem' id="textLink" class="form-control"
+                  <label for="imagem" class="control-label">Link</label>
+                  <input [(ngModel)]='produto.imagem' id="imagem" class="form-control"
                     placeholder="Cole o link da imagem aqui" type="text" required>
                 </div>
 
                 <div class="form-group">
-                  <label for="textLink" class="control-label">Descrição</label>
-                  <input [(ngModel)]='produto.descricao' id="textLink" class="form-control"
+                  <label for="descricao" class="control-label">Descrição</label>
+                  <input [(ngModel)]='produto.descricao' id="descricao" class="form-control"
                     placeholder="Descrição produto" type="text" required>
                 </div>
 
