--- a/FrontEnd/eRural/src/app/inicial/inicial.component.css
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.css
@@ -1,4 +1,9 @@
-
+hr {
+    width: 40cm;
+    position: absolute;
+    justify-content: center;
+    left: 80px;
+}
 
 .jumbotronBackground{
 background-color: rgb(107, 205, 50);
