--- a/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
@@ -8,17 +8,17 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100 img-teste"
-        src="https://imgur.com/cvuF0FY.png"
+        src="https://i.imgur.com/QBYF41k.jpg"
         alt="Primeiro Slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 img-teste"
-        src="https://imgur.com/N6Y46VQ.png"
+        src="https://i.imgur.com/7wbLPh4.jpg"
         alt="Segundo Slide">
     </div>
     <div class="carousel-item img-teste">
       <img class="d-block w-100"
-        src="https://imgur.com/MPqrTFz.png"
+        src="https://i.imgur.com/rNRCG5u.jpg"
         alt="Terceiro Slide">
     </div>
   </div>
