--- a/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
@@ -7,19 +7,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100 img-teste"
-        src="https://i.imgur.com/QBYF41k.jpg"
-        alt="Primeiro Slide">
+      <img class="d-block w-100 img-teste" src="https://i.imgur.com/lpiiCD9.jpg" alt="Primeiro Slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100 img-teste"
-        src="https://i.imgur.com/7wbLPh4.jpg"
-        alt="Segundo Slide">
+      <img class="d-block w-100 img-teste" src="https://i.imgur.com/LnTR1fe.png" alt="Segundo Slide">
     </div>
     <div class="carousel-item img-teste">
-      <img class="d-block w-100"
-        src="https://i.imgur.com/rNRCG5u.jpg"
-        alt="Terceiro Slide">
+      <img class="d-block w-100" src="https://i.imgur.com/wPG3GAE.jpg" alt="Terceiro Slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -39,10 +33,8 @@
     <div class="row">
       <div class="col-md-8">
         <h1>Seja um parceiro</h1>
-        <p class="lead ">Venha ser um cliente e-Rural, comprando algum de nossos itens você tem a possibilidade de conhecer a origem dos produtos e saber como são produzidos.Tem a possibilidade de consumir alimentos mais frescos,
-          recém colhidos, comprar produtos por um preço mais em conta aos quais não foram incorporados as custos de transporte ate o
-          mercado e de comercialização, além disso, pode haver uma troca de informações entre o produtor e o
-          consumidor, estabelecendo-se um vínculo de fidelidade, e ainda contribuindo coma a alimentação de pessoas carentes, venha ser um e-Rural você também. </p>
+        <p class="lead ">Comprando algum de nossos itens você tem a possibilidade de consumir alimentos mais
+          frescos, e com preço justo.Venha ser um e-Rural você também! </p>
       </div>
       <div class="col-md-4">
         <img src="https://i.imgur.com/DkPmKq0.png" alt="">
@@ -57,43 +49,43 @@
 <div class="container d-flex">
   <div class="row mb-5 mt-5 m-auto">
 
-      <div class="product card mr-3 mt-5 ml-3 mb-5">
-        <div class="imgbox">
-          <img src="https://i.imgur.com/N6nLtFA.png">
-        </div>
-        <div class="details">
-          <h2>Vegetais<br><span>Frescos</span></h2>
-          <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
-          <!--CARRINHO-->
-        </div>
+    <div class="product card mr-3 mt-5 ml-3 mb-5">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/N6nLtFA.png">
       </div>
+      <div class="details">
+        <h2>Vegetais<br><span>Frescos</span></h2>
+        <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
 
-      <div class="product card mr-3 mt-5 ml-3 mb-5">
-        <div class="imgbox">
-          <img src="https://i.imgur.com/4RBVSxi.png">
-        </div>
-        <div class="details">
-          <h2>Hortaliças <br><span>Frescas</span></h2>
-          <a class="card1"routerLink="/listaProdutos">Veja mais!</a>
-          <!--CARRINHO-->
-        </div>
+    <div class="product card mr-3 mt-5 ml-3 mb-5">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/4RBVSxi.png">
       </div>
+      <div class="details">
+        <h2>Hortaliças <br><span>Frescas</span></h2>
+        <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
 
-      <div class="product card mr-3 mt-5 ml-3 mb-5">
-        <div class="imgbox">
-          <img src="https://i.imgur.com/8nICsK8.png">
-        </div>
-        <div class="details">
-          <div class="row mt-1 mb-2">
-            <h2 class="text-center">Ferramentas</h2>
-          </div>
-          <div class="row d-flex justify-content-center mb-0">
-            <p><small>Itens para plantio</small></p>
-          </div>
-          <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
-          <!--CARRINHO-->
-        </div>
+    <div class="product card mr-3 mt-5 ml-3 mb-5">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/8nICsK8.png">
       </div>
+      <div class="details">
+        <div class="row mt-1 mb-2">
+          <h2 class="text-center">Ferramentas</h2>
+        </div>
+        <div class="row d-flex justify-content-center mb-0">
+          <p><small>Itens para plantio</small></p>
+        </div>
+        <a class="card1" routerLink="/listaProdutos">Veja mais!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
   </div>
 </div>
 <!--/CARD-->
