--- a/FrontEnd/eRural/src/app/inicial/inicial.component.html
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.html
@@ -7,7 +7,7 @@
     </ol>
     <div class="carro carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://i.imgur.com/yaALJ95.jpg" alt="Primeiro Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/x70n9DL.jpg" alt="Primeiro Slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="https://i.imgur.com/W1ApRdf.jpg" alt="Segundo Slide">
