--- a/FrontEnd/eRural/src/app/inicial/inicial.component.html
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.html
@@ -10,10 +10,10 @@
         <img class="d-block w-100" src="https://i.imgur.com/x70n9DL.jpg" alt="Primeiro Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.imgur.com/W1ApRdf.jpg" alt="Segundo Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/qffTRox.jpg" alt="Segundo Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.imgur.com/4VaegwM.jpg" alt="Terceiro Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/kYXaArN.jpg" alt="Terceiro Slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
