--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
@@ -8,17 +8,17 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100 img-teste"
-        src="https://i.imgur.com/nDEiWH3.png"
+        src="https://i.imgur.com/G9ucsyE.jpg"
         alt="Primeiro Slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 img-teste"
-        src="https://i.imgur.com/JPsoTa7.png"
+        src="https://i.imgur.com/LnTR1fe.png"
         alt="Segundo Slide">
     </div>
     <div class="carousel-item img-teste">
       <img class="d-block w-100"
-        src="https://i.imgur.com/3vsuCxI.png"
+        src="https://i.imgur.com/wPG3GAE.jpg"
         alt="Terceiro Slide">
     </div>
   </div>
